--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,7 @@ body,html{
     margin: 0;
     width: 100%;
     height: 100%;
-     background-image: url(/bgdrum.png);
+     background-image: url("./bgdrum.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
